...
    }
    
    // Create method that displays UIAlertController with a textfield
    @objc func showTextField() {
        let ac = UIAlertController(title: "Enter Keyword", message: nil, preferredStyle: .alert)
        ac.addTextField()
        let submitAction = UIAlertAction(title: "Search", style: .default) { [weak self, weak ac] action in guard let answer = ac?.textFields?[0].text else { return }
            self?.submit(answer)
        }
        
        ac.addAction(submitAction)
        present(ac, animated: true)
    }
...
